--- a/applications/processor/splitter-processor/pom.xml
+++ b/applications/processor/splitter-processor/pom.xml
@@ -44,32 +44,30 @@
                 <artifactId>spring-cloud-app-starter-doc-maven-plugin</artifactId>
             </plugin>
             <plugin>
-                <groupId>org.springframework.cloud.stream.app.plugin</groupId>
-                <artifactId>spring-cloud-stream-app-maven-plugin</artifactId>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dataflow-apps-generator-plugin</artifactId>
                 <configuration>
-                    <generatedApp>
+                    <application>
                         <name>splitter</name>
                         <type>processor</type>
                         <version>${project.version}</version>
                         <configClass>org.springframework.cloud.fn.splitter.SplitterFunctionConfiguration.class
                         </configClass>
                         <functionDefinition>byteArrayTextToString|splitterFunction</functionDefinition>
-                    </generatedApp>
 
-                    <dependencies>
-                        <dependency>
-                            <groupId>org.springframework.cloud.fn</groupId>
-                            <artifactId>payload-converter-function</artifactId>
-                        </dependency>
-                        <dependency>
-                            <groupId>org.springframework.cloud.fn</groupId>
-                            <artifactId>splitter-function</artifactId>
-                        </dependency>
-                    </dependencies>
-
-                    <containerImage>
-                        <enableMetadata>true</enableMetadata>
-                    </containerImage>
+                        <maven>
+                            <dependencies>
+                                <dependency>
+                                    <groupId>org.springframework.cloud.fn</groupId>
+                                    <artifactId>payload-converter-function</artifactId>
+                                </dependency>
+                                <dependency>
+                                    <groupId>org.springframework.cloud.fn</groupId>
+                                    <artifactId>splitter-function</artifactId>
+                                </dependency>
+                            </dependencies>
+                        </maven>
+                    </application>
                 </configuration>
             </plugin>
         </plugins>
