--- a/applications/source/load-generator-source/pom.xml
+++ b/applications/source/load-generator-source/pom.xml
@@ -35,24 +35,27 @@
                 <artifactId>spring-cloud-app-starter-doc-maven-plugin</artifactId>
             </plugin>
             <plugin>
-                <groupId>org.springframework.cloud.stream.app.plugin</groupId>
-                <artifactId>spring-cloud-stream-app-maven-plugin</artifactId>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dataflow-apps-generator-plugin</artifactId>
                 <configuration>
-                    <generatedApp>
+                    <application>
                         <name>load-generator</name>
                         <type>source</type>
                         <version>${project.version}</version>
                         <configClass>
                             org.springframework.cloud.stream.app.source.load.generator.LoadGeneratorSourceConfiguration.class
                         </configClass>
-                    </generatedApp>
-                    <dependencies>
-                        <dependency>
-                            <groupId>org.springframework.cloud.stream.app</groupId>
-                            <artifactId>load-generator-source</artifactId>
-                            <version>${project.version}</version>
-                        </dependency>
-                    </dependencies>
+
+                        <maven>
+                            <dependencies>
+                                <dependency>
+                                    <groupId>org.springframework.cloud.stream.app</groupId>
+                                    <artifactId>load-generator-source</artifactId>
+                                    <version>${project.version}</version>
+                                </dependency>
+                            </dependencies>
+                        </maven>
+                    </application>
                 </configuration>
             </plugin>
         </plugins>
