--- a/applications/source/twitter-message-source/pom.xml
+++ b/applications/source/twitter-message-source/pom.xml
@@ -49,10 +49,10 @@
 				<artifactId>spring-cloud-app-starter-doc-maven-plugin</artifactId>
 			</plugin>
 			<plugin>
-				<groupId>org.springframework.cloud.stream.app.plugin</groupId>
-				<artifactId>spring-cloud-stream-app-maven-plugin</artifactId>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-dataflow-apps-generator-plugin</artifactId>
 				<configuration>
-					<generatedApp>
+					<application>
 						<name>twitter-message</name>
 						<type>source</type>
 						<version>${project.version}</version>
@@ -60,13 +60,16 @@
 							org.springframework.cloud.fn.supplier.twitter.message.TwitterMessageSupplierConfiguration.class
 						</configClass>
 						<functionDefinition>twitterMessageSupplier</functionDefinition>
-					</generatedApp>
-					<dependencies>
-						<dependency>
-							<groupId>org.springframework.cloud.fn</groupId>
-							<artifactId>twitter-supplier</artifactId>
-						</dependency>
-					</dependencies>
+
+						<maven>
+							<dependencies>
+								<dependency>
+									<groupId>org.springframework.cloud.fn</groupId>
+									<artifactId>twitter-supplier</artifactId>
+								</dependency>
+							</dependencies>
+						</maven>
+					</application>
 				</configuration>
 			</plugin>
 		</plugins>
