--- a/applications/sink/cassandra-sink/pom.xml
+++ b/applications/sink/cassandra-sink/pom.xml
@@ -34,24 +34,26 @@
                 <artifactId>spring-cloud-app-starter-doc-maven-plugin</artifactId>
             </plugin>
             <plugin>
-                <groupId>org.springframework.cloud.stream.app.plugin</groupId>
-                <artifactId>spring-cloud-stream-app-maven-plugin</artifactId>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dataflow-apps-generator-plugin</artifactId>
                 <configuration>
-                    <generatedApp>
+                    <application>
                         <name>cassandra</name>
                         <type>sink</type>
                         <version>${project.version}</version>
                         <configClass>
                             org.springframework.cloud.fn.consumer.cassandra.CassandraConsumerConfiguration.class
                         </configClass>
-                    </generatedApp>
 
-                    <dependencies>
-                        <dependency>
-                            <groupId>org.springframework.cloud.fn</groupId>
-                            <artifactId>cassandra-consumer</artifactId>
-                        </dependency>
-                    </dependencies>
+                        <maven>
+                            <dependencies>
+                                <dependency>
+                                    <groupId>org.springframework.cloud.fn</groupId>
+                                    <artifactId>cassandra-consumer</artifactId>
+                                </dependency>
+                            </dependencies>
+                        </maven>
+                    </application>
                 </configuration>
             </plugin>
 
