--- a/applications/sink/websocket-sink/pom.xml
+++ b/applications/sink/websocket-sink/pom.xml
@@ -49,15 +49,24 @@
                 <artifactId>spring-cloud-app-starter-doc-maven-plugin</artifactId>
             </plugin>
             <plugin>
-                <groupId>org.springframework.cloud.stream.app.plugin</groupId>
-                <artifactId>spring-cloud-stream-app-maven-plugin</artifactId>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dataflow-apps-generator-plugin</artifactId>
                 <configuration>
-                    <generatedApp>
+                    <application>
                         <name>websocket</name>
                         <type>sink</type>
                         <version>${project.version}</version>
                         <configClass>org.springframework.cloud.fn.consumer.websocket.WebsocketConsumerConfiguration.class</configClass>
-                    </generatedApp>
+
+                        <maven>
+                            <dependencies>
+                                <dependency>
+                                    <groupId>org.springframework.cloud.fn</groupId>
+                                    <artifactId>websocket-consumer</artifactId>
+                                </dependency>
+                            </dependencies>
+                        </maven>
+                    </application>
                     <dependencies>
                         <dependency>
                             <groupId>org.springframework.cloud.fn</groupId>
